# GRPC_CLI_chat

./: .gitignore  CMAKE_CONSTANTS.h.in  CMakeLists.txt
client/: CMAKE_CONSTANTS.h  CMakeLists.txt  UIchat_menu.h  UImenu.h  chat.h  chat_data_base_operator.h  json_parser.h  main.cpp  operator.h  server_data_base_operator.h  user_session.h  utility.h
client/protos/: helloworld.proto
protos/: .chat.proto.swp  chat.proto
server/: CMAKE_CONSTANTS.h  CMakeLists.txt  MongoDB_Manager.h  chat_service.h  data_base_service.h  json_parser.cpp  json_parser.h  main.cpp  server_operator.h  utility.h
server/protos/: chat.proto
